# quasar-models

./: .gitignore  pyproject.toml  setup.py
.github/prompts/: documentation.prompt.md
scripts/: init_ba_templates.py  init_fe_templates.py
src/error_estimation/: samples.py
src/quasar_models/: __init__.py
src/quasar_models/balmer/: __init__.py  balmer_model.py  balmer_template.py  derivation.md  evaluation.py  io.py  utils.py
src/quasar_models/balmer/.data/: sh1995.csv
src/quasar_models/balmer/attenuation/: __init__.py  balmer_attenuation_model.py  evaluation.py
src/quasar_models/balmer/continuum/: __init__.py  balmer_continuum_model.py  evaluation.py  io.py  (+2 more)
src/quasar_models/continuum/: __init__.py  derivation.md  evaluation.py  powerlaw.py
src/quasar_models/host/: __init__.py  derivation.md  evaluation.py  host_galaxy_model.py  host_galaxy_template.py  io.py  setup.py
src/quasar_models/iron/: __init__.py  derivation.md  evaluation.py  io.py  iron_model.py  iron_template.py  setup.py  utils.py
src/quasar_models/line/: __init__.py  derivation.md  evaluation.py  gaussian.py  utils.py  vprofilecopies.py
src/quasar_models/utils/: astropy.py  basemodel.py  interpolation.py  linear_regression.py  template.py
tests/balmer/: test_can_import_balmer_module.py  test_can_load_balmer_templates.py
tests/continuum/: test_can_import_module.py  test_evaluate.py
tests/iron/: test_can_import_iron_module.py  test_can_load_iron_templates.py  test_iron_evaluation.py
tests/line/: test_can_import_line_module.py  test_gaussian_evaluation.py  test_numba_benchmark.py
(+13 files in other folders)
