[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quasar-models"
version = "0.1.0"
description = "Spectral fitting models with Pydantic and AstroPy compatibility"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Liam", email = "liam_deburca@me.com"}
]
keywords = ["quasar", "spectral", "models", "emission-lines"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.16",
    "astropy>=7.0",
    "pydantic>=2.12",
    "quasar-typing",
    "quasar-utils",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
]

[project.urls]
Repository = "https://github.com/liamdeburca/quasar-models"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
